--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 28089
   tomcat:
     max-threads: 800
     uri-encoding: UTF-8
@@ -19,7 +19,9 @@ spring:
 
 # Swagger json url address
 # etc. https://petstore.swagger.io/
-swagger.url: https://petstore.swagger.io/v2/swagger.json
+#swagger.url: https://petstore.swagger.io/v2/swagger.json
+swagger.url: http://localhost:18089/orderreorder/v2/api-docs
+# 访问地址：etc. http://localhost:28089/toWord
 
 
 
